[gd_scene load_steps=7 format=2]

[ext_resource path="res://GlobalAssets/ChiKareGo2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/TitleScreen/Assets/MenuArrow.png" type="Texture" id=2]
[ext_resource path="res://UI/TitleScreen/Code/ButtonTemplate.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=1]
resource_name = "MenuArrowLeft"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("leftArrow:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "MenuArrows"
length = 0.68
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rightArrow:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("leftArrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1 ]
}

[node name="ButtonTemplate" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -647.0
margin_bottom = -525.0
rect_min_size = Vector2( 375, 75 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.345098, 0, 0.658824, 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.74902, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Button Text[/center]"
text = "Button Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftArrow" type="Sprite" parent="."]
position = Vector2( 17.1013, 30.5017 )
texture = ExtResource( 2 )
hframes = 8

[node name="rightArrow" type="Sprite" parent="."]
position = Vector2( 369.333, 33.4983 )
texture = ExtResource( 2 )
flip_h = true
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "MenuArrows"
anims/MenuArrowLeft = SubResource( 1 )
anims/MenuArrows = SubResource( 2 )

[connection signal="focus_entered" from="." to="." method="_on_ButtonTemplate_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_ButtonTemplate_focus_exited"]
